--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@
 cmake_minimum_required(VERSION 3.1)
 cmake_policy(SET CMP0048 NEW)
 
-project(tunnel VERSION 0.1.0)
+project(forwarder VERSION 0.1.0)
 
 set(CDEPLOY_NO_DEBUG_BUILD True)
 set(CDEPLOY_NO_COMPILER True)
@@ -15,15 +15,15 @@ add_subdirectory(src)
 set(CPACK_GENERATOR "DEB")
 set(CPACK_PACKAGE_CONTACT "Colin Graf <colin.graf@sovereign-labs.com>")
 set(CPACK_PACKAGE_VERSION "${PROJECT_VERSION}")
-set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "A very simple TCP v4 tunnel daemon")
+set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "A very simple TCP v4 port forwarder daemon")
 set(CPACK_PACKAGING_INSTALL_PREFIX "/")
 #set(CPACK_DEBIAN_FILE_NAME "DEB-DEFAULT")
-set(CPACK_DEBIAN_PACKAGE_HOMEPAGE "https://github.com/craflin/tunnel")
+set(CPACK_DEBIAN_PACKAGE_HOMEPAGE "https://github.com/craflin/forwarder")
 set(CPACK_DEBIAN_PACKAGE_DEPENDS "libc6 (>= 2.15)")
 set(CPACK_DEBIAN_PACKAGE_SECTION "net")
 
 include(CPack)
 
-install(FILES etc/tunnel.conf DESTINATION etc)
-install(FILES etc/default/tunnel DESTINATION etc/default)
-install(PROGRAMS etc/init.d/tunnel DESTINATION etc/init.d)
+install(FILES etc/forwarder.conf DESTINATION etc)
+install(FILES etc/default/forwarder DESTINATION etc/default)
+install(PROGRAMS etc/init.d/forwarder DESTINATION etc/init.d)
