--- a/etc/forwarder.conf
+++ b/etc/forwarder.conf
@@ -1,8 +1,8 @@
 
-# A list of listen and target addresses of indivial tunnels.
+# A list of listen and target addresses.
 # Example:
-#tunnel 0.0.0.0:80:192.168.0.27:8080
-#tunnel 443:example-site.com:443
+#forward 0.0.0.0:80:192.168.0.27:8080
+#forward 443:example-site.com:443
 #
 # The syntax is:
-#tunnel [<bind_addr>:]<bind_port>:<host>:<host_port>
+#forward [<bind_addr>:]<bind_port>:<host>:<host_port>
